--- a/pentaho-webpackage/pom.xml
+++ b/pentaho-webpackage/pom.xml
@@ -7,12 +7,12 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-osgi-bundles</artifactId>
-    <version>8.1.0.0-SNAPSHOT</version>
+    <version>8.1.0.5-620</version>
   </parent>
 
   <groupId>org.pentaho.webpackage</groupId>
   <artifactId>pentaho-webpackage-modules</artifactId>
-  <version>8.1.0.0-SNAPSHOT</version>
+  <version>8.1.0.5-620</version>
 
   <packaging>pom</packaging>
 
